--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="maps-content">
                 <article>
                     <h3><a href="https://www.komoot.com/tour/1619388036#oA#">В Сморгонь по вайбу</a></h3>
-                    <img src="trash/images/1.jpg" alt="В Сморгонь по вайбу">
+                    <img src="images/1.jpg" alt="В Сморгонь по вайбу">
                 </article>
                 <!-- Другие маршруты -->
             </div>
